packages/cubejs-schema-compiler/src/parser/GenericSqlParser.ts
// Generated from src/parser/GenericSql.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import GenericSqlListener from "./GenericSqlListener.js";
import GenericSqlVisitor from "./GenericSqlVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class GenericSqlParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly SELECT = 5;
	public static readonly ASTERISK = 6;
	public static readonly FROM = 7;
	public static readonly WHERE = 8;
	public static readonly AND = 9;
	public static readonly OR = 10;
	public static readonly NOT = 11;
	public static readonly AS = 12;
	public static readonly LT = 13;
	public static readonly LTE = 14;
	public static readonly GT = 15;
	public static readonly GTE = 16;
	public static readonly EQUALS = 17;
	public static readonly NOT_EQUALS = 18;
	public static readonly IS = 19;
	public static readonly NULL = 20;
	public static readonly CAST = 21;
	public static readonly REGEXP = 22;
	public static readonly INDEXED_PARAM = 23;
	public static readonly PARAM_PLACEHOLDER = 24;
	public static readonly ID = 25;
	public static readonly DIGIT = 26;
	public static readonly QUOTED_ID = 27;
	public static readonly STRING = 28;
	public static readonly WHITESPACE = 29;
	public static readonly COMMENT = 30;
	public static readonly MULTILINE_COMMENT = 31;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_statement = 0;
	public static readonly RULE_query = 1;
	public static readonly RULE_fromTables = 2;
	public static readonly RULE_selectFields = 3;
	public static readonly RULE_field = 4;
	public static readonly RULE_aliasField = 5;
	public static readonly RULE_boolExp = 6;
	public static readonly RULE_exp = 7;
	public static readonly RULE_numeric = 8;
	public static readonly RULE_binaryOperator = 9;
	public static readonly RULE_unaryOperator = 10;
	public static readonly RULE_idPath = 11;
	public static readonly RULE_identifier = 12;
	public static readonly literalNames: (string | null)[] = [ null, "'('", 
                                                            "')'", "','", 
                                                            "'.'", "'SELECT'", 
                                                            "'*'", "'FROM'", 
                                                            "'WHERE'", "'AND'", 
                                                            "'OR'", "'NOT'", 
                                                            "'AS'", "'<'", 
                                                            "'<='", "'>'", 
                                                            "'>='", "'='", 
                                                            null, "'IS'", 
                                                            "'NULL'", "'CAST'", 
                                                            "'REGEXP'", 
                                                            null, "'?'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, "SELECT", 
                                                             "ASTERISK", 
                                                             "FROM", "WHERE", 
                                                             "AND", "OR", 
                                                             "NOT", "AS", 
                                                             "LT", "LTE", 
                                                             "GT", "GTE", 
                                                             "EQUALS", "NOT_EQUALS", 
                                                             "IS", "NULL", 
                                                             "CAST", "REGEXP", 
                                                             "INDEXED_PARAM", 
                                                             "PARAM_PLACEHOLDER", 
                                                             "ID", "DIGIT", 
                                                             "QUOTED_ID", 
                                                             "STRING", "WHITESPACE", 
                                                             "COMMENT", 
                                                             "MULTILINE_COMMENT" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"statement", "query", "fromTables", "selectFields", "field", "aliasField", 
		"boolExp", "exp", "numeric", "binaryOperator", "unaryOperator", "idPath", 
		"identifier",
	];
	public get grammarFileName(): string { return "GenericSql.g4"; }
	public get literalNames(): (string | null)[] { return GenericSqlParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return GenericSqlParser.symbolicNames; }
	public get ruleNames(): string[] { return GenericSqlParser.ruleNames; }
	public get serializedATN(): number[] { return GenericSqlParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, GenericSqlParser._ATN, GenericSqlParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let localctx: StatementContext = new StatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, GenericSqlParser.RULE_statement);
		try {
			this.state = 34;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 5:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 26;
				this.query();
				this.state = 27;
				this.match(GenericSqlParser.EOF);
				}
				break;
			case 1:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 29;
				this.match(GenericSqlParser.T__0);
				this.state = 30;
				this.query();
				this.state = 31;
				this.match(GenericSqlParser.T__1);
				this.state = 32;
				this.match(GenericSqlParser.EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public query(): QueryContext {
		let localctx: QueryContext = new QueryContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, GenericSqlParser.RULE_query);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 36;
			this.match(GenericSqlParser.SELECT);
			this.state = 37;
			this.selectFields();
			this.state = 38;
			this.match(GenericSqlParser.FROM);
			this.state = 39;
			localctx._from_ = this.fromTables();
			this.state = 42;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===8) {
				{
				this.state = 40;
				this.match(GenericSqlParser.WHERE);
				this.state = 41;
				localctx._where = this.boolExp(0);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public fromTables(): FromTablesContext {
		let localctx: FromTablesContext = new FromTablesContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, GenericSqlParser.RULE_fromTables);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 44;
			this.aliasField();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public selectFields(): SelectFieldsContext {
		let localctx: SelectFieldsContext = new SelectFieldsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, GenericSqlParser.RULE_selectFields);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			{
			this.state = 46;
			this.field();
			this.state = 51;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===3) {
				{
				{
				this.state = 47;
				this.match(GenericSqlParser.T__2);
				this.state = 48;
				this.field();
				}
				}
				this.state = 53;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public field(): FieldContext {
		let localctx: FieldContext = new FieldContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, GenericSqlParser.RULE_field);
		try {
			this.state = 56;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 1:
			case 4:
			case 21:
			case 22:
			case 23:
			case 24:
			case 25:
			case 26:
			case 27:
			case 28:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 54;
				this.aliasField();
				}
				break;
			case 6:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 55;
				this.match(GenericSqlParser.ASTERISK);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public aliasField(): AliasFieldContext {
		let localctx: AliasFieldContext = new AliasFieldContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, GenericSqlParser.RULE_aliasField);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 58;
			this.exp(0);
			this.state = 63;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 167776256) !== 0)) {
				{
				this.state = 60;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===12) {
					{
					this.state = 59;
					this.match(GenericSqlParser.AS);
					}
				}

				this.state = 62;
				this.identifier();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public boolExp(): BoolExpContext;
	public boolExp(_p: number): BoolExpContext;
	// @RuleVersion(0)
	public boolExp(_p?: number): BoolExpContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: BoolExpContext = new BoolExpContext(this, this._ctx, _parentState);
		let _prevctx: BoolExpContext = localctx;
		let _startState: number = 12;
		this.enterRecursionRule(localctx, 12, GenericSqlParser.RULE_boolExp, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 69;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 1:
			case 4:
			case 21:
			case 22:
			case 23:
			case 24:
			case 25:
			case 26:
			case 27:
			case 28:
				{
				this.state = 66;
				this.exp(0);
				}
				break;
			case 11:
				{
				this.state = 67;
				this.match(GenericSqlParser.NOT);
				this.state = 68;
				this.boolExp(1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 79;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 8, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					this.state = 77;
					this._errHandler.sync(this);
					switch ( this._interp.adaptivePredict(this._input, 7, this._ctx) ) {
					case 1:
						{
						localctx = new BoolExpContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, GenericSqlParser.RULE_boolExp);
						this.state = 71;
						if (!(this.precpred(this._ctx, 3))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 3)");
						}
						this.state = 72;
						this.match(GenericSqlParser.AND);
						this.state = 73;
						this.boolExp(4);
						}
						break;
					case 2:
						{
						localctx = new BoolExpContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, GenericSqlParser.RULE_boolExp);
						this.state = 74;
						if (!(this.precpred(this._ctx, 2))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 2)");
						}
						this.state = 75;
						this.match(GenericSqlParser.OR);
						this.state = 76;
						this.boolExp(3);
						}
						break;
					}
					}
				}
				this.state = 81;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 8, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}

	public exp(): ExpContext;
	public exp(_p: number): ExpContext;
	// @RuleVersion(0)
	public exp(_p?: number): ExpContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: ExpContext = new ExpContext(this, this._ctx, _parentState);
		let _prevctx: ExpContext = localctx;
		let _startState: number = 14;
		this.enterRecursionRule(localctx, 14, GenericSqlParser.RULE_exp, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 114;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 10, this._ctx) ) {
			case 1:
				{
				this.state = 83;
				this.idPath();
				}
				break;
			case 2:
				{
				this.state = 84;
				this.identifier();
				this.state = 85;
				this.match(GenericSqlParser.T__0);
				{
				this.state = 86;
				this.exp(0);
				this.state = 91;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===3) {
					{
					{
					this.state = 87;
					this.match(GenericSqlParser.T__2);
					this.state = 88;
					this.exp(0);
					}
					}
					this.state = 93;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
				this.state = 94;
				this.match(GenericSqlParser.T__1);
				}
				break;
			case 3:
				{
				this.state = 96;
				this.match(GenericSqlParser.CAST);
				this.state = 97;
				this.match(GenericSqlParser.T__0);
				this.state = 98;
				this.exp(0);
				this.state = 99;
				this.match(GenericSqlParser.AS);
				this.state = 100;
				this.identifier();
				this.state = 101;
				this.match(GenericSqlParser.T__1);
				}
				break;
			case 4:
				{
				this.state = 103;
				this.match(GenericSqlParser.REGEXP);
				this.state = 104;
				this.match(GenericSqlParser.STRING);
				}
				break;
			case 5:
				{
				this.state = 105;
				this.match(GenericSqlParser.STRING);
				}
				break;
			case 6:
				{
				this.state = 106;
				this.numeric();
				}
				break;
			case 7:
				{
				this.state = 107;
				this.identifier();
				}
				break;
			case 8:
				{
				this.state = 108;
				this.match(GenericSqlParser.INDEXED_PARAM);
				}
				break;
			case 9:
				{
				this.state = 109;
				this.match(GenericSqlParser.PARAM_PLACEHOLDER);
				}
				break;
			case 10:
				{
				this.state = 110;
				this.match(GenericSqlParser.T__0);
				this.state = 111;
				this.exp(0);
				this.state = 112;
				this.match(GenericSqlParser.T__1);
				}
				break;
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 124;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 12, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					this.state = 122;
					this._errHandler.sync(this);
					switch ( this._interp.adaptivePredict(this._input, 11, this._ctx) ) {
					case 1:
						{
						localctx = new ExpContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, GenericSqlParser.RULE_exp);
						this.state = 116;
						if (!(this.precpred(this._ctx, 12))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 12)");
						}
						this.state = 117;
						this.binaryOperator();
						this.state = 118;
						this.exp(13);
						}
						break;
					case 2:
						{
						localctx = new ExpContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, GenericSqlParser.RULE_exp);
						this.state = 120;
						if (!(this.precpred(this._ctx, 11))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 11)");
						}
						this.state = 121;
						this.unaryOperator();
						}
						break;
					}
					}
				}
				this.state = 126;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 12, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}
	// @RuleVersion(0)
	public numeric(): NumericContext {
		let localctx: NumericContext = new NumericContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, GenericSqlParser.RULE_numeric);
		try {
			let _alt: number;
			this.state = 146;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 26:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 128;
				this._errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						this.state = 127;
						this.match(GenericSqlParser.DIGIT);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					this.state = 130;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 13, this._ctx);
				} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
				this.state = 138;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 15, this._ctx) ) {
				case 1:
					{
					this.state = 132;
					this.match(GenericSqlParser.T__3);
					this.state = 134;
					this._errHandler.sync(this);
					_alt = 1;
					do {
						switch (_alt) {
						case 1:
							{
							{
							this.state = 133;
							this.match(GenericSqlParser.DIGIT);
							}
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						this.state = 136;
						this._errHandler.sync(this);
						_alt = this._interp.adaptivePredict(this._input, 14, this._ctx);
					} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
					}
					break;
				}
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 140;
				this.match(GenericSqlParser.T__3);
				this.state = 142;
				this._errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						this.state = 141;
						this.match(GenericSqlParser.DIGIT);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					this.state = 144;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 16, this._ctx);
				} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public binaryOperator(): BinaryOperatorContext {
		let localctx: BinaryOperatorContext = new BinaryOperatorContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, GenericSqlParser.RULE_binaryOperator);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 148;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 516096) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public unaryOperator(): UnaryOperatorContext {
		let localctx: UnaryOperatorContext = new UnaryOperatorContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, GenericSqlParser.RULE_unaryOperator);
		try {
			this.state = 155;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 18, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 150;
				this.match(GenericSqlParser.IS);
				this.state = 151;
				this.match(GenericSqlParser.NULL);
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 152;
				this.match(GenericSqlParser.IS);
				this.state = 153;
				this.match(GenericSqlParser.NOT);
				this.state = 154;
				this.match(GenericSqlParser.NULL);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public idPath(): IdPathContext {
		let localctx: IdPathContext = new IdPathContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, GenericSqlParser.RULE_idPath);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 157;
			this.identifier();
			this.state = 162;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 19, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 158;
					this.match(GenericSqlParser.T__3);
					this.state = 159;
					this.identifier();
					}
					}
				}
				this.state = 164;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 19, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public identifier(): IdentifierContext {
		let localctx: IdentifierContext = new IdentifierContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, GenericSqlParser.RULE_identifier);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 165;
			_la = this._input.LA(1);
			if(!(_la===25 || _la===27)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public sempred(localctx: RuleContext, ruleIndex: number, predIndex: number): boolean {
		switch (ruleIndex) {
		case 6:
			return this.boolExp_sempred(localctx as BoolExpContext, predIndex);
		case 7:
			return this.exp_sempred(localctx as ExpContext, predIndex);
		}
		return true;
	}
	private boolExp_sempred(localctx: BoolExpContext, predIndex: number): boolean {
		switch (predIndex) {
		case 0:
			return this.precpred(this._ctx, 3);
		case 1:
			return this.precpred(this._ctx, 2);
		}
		return true;
	}
	private exp_sempred(localctx: ExpContext, predIndex: number): boolean {
		switch (predIndex) {
		case 2:
			return this.precpred(this._ctx, 12);
		case 3:
			return this.precpred(this._ctx, 11);
		}
		return true;
	}


	private static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!GenericSqlParser.__ATN) {
			GenericSqlParser.__ATN = new ATNDeserializer().deserialize(GenericSqlParser._serializedATN);
		}

		return GenericSqlParser.__ATN;
	}


	static DecisionsToDFA = GenericSqlParser._ATN.decisionToState.map( (ds: DecisionState, index: number) => new DFA(ds, index) );

}

export class StatementContext extends ParserRuleContext {
	constructor(parser?: GenericSqlParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public query(): QueryContext {
		return this.getTypedRuleContext(QueryContext, 0) as QueryContext;
	}
	public EOF(): TerminalNode {
		return this.getToken(GenericSqlParser.EOF, 0);
	}
    public get ruleIndex(): number {
    	return GenericSqlParser.RULE_statement;
	}
	public enterRule(listener: GenericSqlListener): void {
	    if(listener.enterStatement) {
	 		listener.enterStatement(this);
		}
	}
	public exitRule(listener: GenericSqlListener): void {
	    if(listener.exitStatement) {
	 		listener.exitStatement(this);
		}
	}
	// @Override
	public accept<Result>(visitor: GenericSqlVisitor<Result>): Result {
		if (visitor.visitStatement) {
			return visitor.visitStatement(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class QueryContext extends ParserRuleContext {
	public _from_!: FromTablesContext;
	public _where!: BoolExpContext;
	constructor(parser?: GenericSqlParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public SELECT(): TerminalNode {
		return this.getToken(GenericSqlParser.SELECT, 0);
	}
	public selectFields(): SelectFieldsContext {
		return this.getTypedRuleContext(SelectFieldsContext, 0) as SelectFieldsContext;
	}
	public FROM(): TerminalNode {
		return this.getToken(GenericSqlParser.FROM, 0);
	}
	public fromTables(): FromTablesContext {
		return this.getTypedRuleContext(FromTablesContext, 0) as FromTablesContext;
	}
	public WHERE(): TerminalNode {
		return this.getToken(GenericSqlParser.WHERE, 0);
	}
	public boolExp(): BoolExpContext {
		return this.getTypedRuleContext(BoolExpContext, 0) as BoolExpContext;
	}
    public get ruleIndex(): number {
    	return GenericSqlParser.RULE_query;
	}
	public enterRule(listener: GenericSqlListener): void {
	    if(listener.enterQuery) {
	 		listener.enterQuery(this);
		}
	}
	public exitRule(listener: GenericSqlListener): void {
	    if(listener.exitQuery) {
	 		listener.exitQuery(this);
		}
	}
	// @Override
	public accept<Result>(visitor: GenericSqlVisitor<Result>): Result {
		if (visitor.visitQuery) {
			return visitor.visitQuery(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class FromTablesContext extends ParserRuleContext {
	constructor(parser?: GenericSqlParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public aliasField(): AliasFieldContext {
		return this.getTypedRuleContext(AliasFieldContext, 0) as AliasFieldContext;
	}
    public get ruleIndex(): number {
    	return GenericSqlParser.RULE_fromTables;
	}
	public enterRule(listener: GenericSqlListener): void {
	    if(listener.enterFromTables) {
	 		listener.enterFromTables(this);
		}
	}
	public exitRule(listener: GenericSqlListener): void {
	    if(listener.exitFromTables) {
	 		listener.exitFromTables(this);
		}
	}
	// @Override
	public accept<Result>(visitor: GenericSqlVisitor<Result>): Result {
		if (visitor.visitFromTables) {
			return visitor.visitFromTables(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class SelectFieldsContext extends ParserRuleContext {
	constructor(parser?: GenericSqlParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public field_list(): FieldContext[] {
		return this.getTypedRuleContexts(FieldContext) as FieldContext[];
	}
	public field(i: number): FieldContext {
		return this.getTypedRuleContext(FieldContext, i) as FieldContext;
	}
    public get ruleIndex(): number {
    	return GenericSqlParser.RULE_selectFields;
	}
	public enterRule(listener: GenericSqlListener): void {
	    if(listener.enterSelectFields) {
	 		listener.enterSelectFields(this);
		}
	}
	public exitRule(listener: GenericSqlListener): void {
	    if(listener.exitSelectFields) {
	 		listener.exitSelectFields(this);
		}
	}
	// @Override
	public accept<Result>(visitor: GenericSqlVisitor<Result>): Result {
		if (visitor.visitSelectFields) {
			return visitor.visitSelectFields(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

